# MLPBenchMarkBICO

./: CMakeLists.txt  bico_config.cpp  bico_config.cu  bico_config.h  glu_kernels.h  main.cu  myfile.txt
other/: BICOExplorer.cu  BICOExplorer.h  CMakeLists.txt  Evaluator.cu  Evaluator.h  Evaluator_dispatcher.h  Heuristic.h  KernelConfig.h  configurations.txt  generate_dispatcher.py  kernel.cuh  main.cu  myfile.txt
